# uffice

./: .gitignore  Cargo.toml  LICENSE.md  README.md
.github/workflows/: build.yaml
component/sfml-lib/: Cargo.toml  build.rs
src/: application.rs  color_parser.rs  error.rs  font.rs  fonts.rs  interactable.rs  main.rs  relationships.rs  serialize.rs  structured_document_tag.rs  style.rs  text_settings.rs  user_settings.rs  word_processing.rs  word_processing_xml.rs
src/drawing_ml/: mod.rs  style.rs
src/gui/: animate.rs  app.rs  mod.rs  painter.rs  scroll.rs  widget.rs
src/gui/painter/: macos.rs  win32.rs
src/gui/view/: document_view.rs  mod.rs
src/platform/: mod.rs
src/platform/macos/: mod.rs
src/platform/windows/: mod.rs  registry.rs
src/uffice-lib/: constants.rs  debug.rs  lib.rs  math.rs  namespaces.rs  profiling.rs
src/unicode/: mod.rs
src/unicode/alphabet/: mod.rs
src/wp/: document_properties.rs  instructions.rs  layout.rs  mod.rs  numbering.rs  painter.rs  table.rs
