[package]
authors = ["Tristan Gerritsen", "TheWoosh"]
description = "An alpha-stage word processor, working on compatibility with WordprocessingML format of the Office Open Specification (ECMA-376)."
edition = "2021"
license = "BSD-2-Clause"
name = "uffice"
publish = false
repository = "https://github.com/usadson/uffice"
version = "0.2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = "*"
chrono = "*"
const_format = "*"
dotenv = "*"
font-kit = "*"
notify = "*"
roxmltree = "*"
raw-window-handle = "*"
sfml = "*"
structopt = "*"
strum_macros = "*"
unicode-segmentation = "*"
url = "*"
vulkano = "*"
vulkano-shaders = "*"
vulkano-win = "*"
winit = "0.27.0"
zip = "*"

[target.'cfg(windows)'.dependencies]
# Use my own fork before the Pull Requests have been merged on the main project.
mltg = { version = "*", git = "https://github.com/usadson/mltg" }
registry = "*"
utfx = "*"
windows = { version = "*", features = [
    "Win32_Foundation",
    "Win32_Graphics_Direct2D",
    "Win32_Graphics_Direct2D_Common",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Gdi",
    "Win32_UI_WindowsAndMessaging",
]}

[[bin]]
name = "uffice"
path = "src/main.rs"

[[bin]]
name = "uffice-analysis-tool"
path = "src/bin/analysis-tool/main.rs"

[lib]
name = "uffice_lib"
path = "src/uffice-lib/lib.rs"
