[package]
authors = ["Tristan Gerritsen", "TheWoosh"]
description = "An alpha-stage word processor, working on compatibility with WordprocessingML format of the Office Open Specification (ECMA-376)."
edition = "2021"
license = "BSD-2-Clause"
name = "uffice"
publish = false
repository = "https://github.com/usadson/uffice"
version = "0.2.2"
default-run = "uffice"

[dependencies]
bitflags = "*"
bytemuck = "*"
chrono = "*"
clap = { version = "4.1.3", features = ["derive", "unicode"] }
const_format = "*"
dotenv = "*"
font-kit = "*"
notify = "*"
roxmltree = "*"
raw-window-handle = "0.5.0"
structopt = "*"
strum_macros = "*"
unicode-segmentation = "*"
url = "*"
vulkano = "*"
vulkano-shaders = "*"
vulkano-win = "*"
winit = "0.27.0"
zip = "*"

[target.'cfg(windows)'.dependencies]
# Use my own fork before the Pull Requests have been merged on the main project.
mltg = { version = "*", git = "https://github.com/usadson/mltg", branch = "main" }
registry = "*"
utfx = "*"
windows = { version = "*", features = [
    "UI_Popups",
    "Win32_Foundation",
    "Win32_Graphics_Direct2D",
    "Win32_Graphics_Direct2D_Common",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_System_Recovery",
    "Win32_System_Registry",
    "Win32_System_Threading",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
]}

[[bin]]
name = "uffice"
path = "src/main.rs"

[[bin]]
name = "uffice-analysis-tool"
path = "src/bin/analysis-tool/main.rs"

[lib]
name = "uffice_lib"
path = "src/uffice-lib/lib.rs"

[profile.release]
debug = true
